# spc-io

./: .gitignore  README.md  setup.cfg  setup.py
code/spc_io/: __init__.py
code/spc_io/high_level/: spc.py
code/spc_io/high_level/tests/: test_subfile.py
code/spc_io/low_level/: spc_raw.py
code/spc_io/low_level/headers/: fdate.py  ftflgs.py  logbook.py  main.py  subfile.py
code/spc_io/misc/: enum_type.py
code/spc_io/misc/tests/: test_enum_type.py
