[metadata]
name = spc-io
version = file: VERSION
url = 'https://github.com/h2020charisma/spc-io'
author = 'IDEAconsult Ltd.'
author_email = 'dev-charisma@ideaconsult.net'
description = SPC file format parser
long_description = file: README.md
long_description_content_type = 'text/markdown'
license = ''

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = ~=3.8
install_requires =
    numpy

[options.packages.find]
where = code
exclude =
    tests*

[flake8]
max-line-length = 120
per-file-ignores =
    __init__.py: F401, F403